--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -6,6 +6,11 @@ export(get_barcode_mapping)
 export(get_best_two)
 export(is_doublet)
 export(save_seurat_to_h5ad)
+export(scatter_smooth)
+export(seurat_group_stats)
+export(seurat_posthoc_analysis)
 import(Seurat)
+import(dplyr)
+import(ggplot2)
 import(reticulate)
 importFrom(utils,combn)
