--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -22,4 +22,33 @@ import(Seurat)
 import(dplyr)
 import(ggplot2)
 import(reticulate)
-importFrom(utils,combn)
+importFrom(Seurat,AggregateExpression)
+importFrom(Seurat,GetAssayData)
+importFrom(Seurat,VariableFeatures)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
+importFrom(dplyr,distinct)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(edgeR,DGEList)
+importFrom(edgeR,calcNormFactors)
+importFrom(edgeR,estimateDisp)
+importFrom(edgeR,filterByExpr)
+importFrom(edgeR,glmQLFTest)
+importFrom(edgeR,glmQLFit)
+importFrom(edgeR,topTags)
+importFrom(stats,model.matrix)
+importFrom(stats,relevel)
+importFrom(stats,setNames)
+importFrom(tibble,column_to_rownames)
+importFrom(tibble,rownames_to_column)
+importFrom(tibble,tibble)
+importFrom(tidyr,separate)
