added data and rmd

--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -2,42 +2,101 @@
 
 export(acmb)
 export(all_markers_to_list)
+export(analyze_gene_dynamics)
+export(analyze_gene_dynamics_tradeSeq)
+export(cdf)
+export(cdf_multi)
 export(cmb)
+export(cml)
 export(downsample_sobj)
+export(draw_nichenet_circos_plot)
 export(generate_sample_names)
 export(generate_sample_values)
 export(get_barcode_mapping)
 export(get_best_two)
 export(is_doublet)
+export(ligand_to_target)
 export(marker_filter)
 export(marker_print)
 export(marker_trim)
+export(mybar)
+export(mydensity)
 export(myhm_genes2)
 export(myhm_genesets2)
+export(post_hoc_slope_comparison)
+export(post_hoc_slope_comparison_legacy)
+export(post_hoc_slope_comparison_legacy2)
+export(prepare_nichenet_circos_data)
+export(print_gene_combinations)
+export(process_gene_list_dynamics)
+export(pseudobulk_linear_fit)
+export(pseudobulk_linear_fit_legacy)
+export(pseudobulk_linear_fit_legacy2)
+export(run_nichenet_analysis)
+export(run_slingshot_from_seurat)
+export(save_plot_with_conflict_resolution)
 export(save_seurat_to_h5ad)
 export(scatter_smooth)
+export(scatter_smooth_colored)
 export(seurat_group_stats)
 export(seurat_posthoc_analysis)
+import(RColorBrewer)
 import(Seurat)
+import(SingleCellExperiment)
+import(SummarizedExperiment)
 import(dplyr)
 import(ggplot2)
+import(mgcv)
+import(monocle3)
+import(purrr)
 import(reticulate)
+import(scales)
+import(slingshot)
+import(tidyr)
+import(tradeSeq)
+import(viridisLite)
+importFrom(DiagrammeRsvg,export_svg)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(RColorBrewer,brewer.pal.info)
+importFrom(S4Vectors,DataFrame)
 importFrom(Seurat,AggregateExpression)
+importFrom(Seurat,Cells)
+importFrom(Seurat,DefaultAssay)
+importFrom(Seurat,FindMarkers)
 importFrom(Seurat,GetAssayData)
+importFrom(Seurat,Idents)
 importFrom(Seurat,VariableFeatures)
+importFrom(circlize,CELL_META)
+importFrom(circlize,chordDiagram)
+importFrom(circlize,circos.clear)
+importFrom(circlize,circos.text)
+importFrom(circlize,circos.track)
+importFrom(circlize,mm_h)
+importFrom(circlize,uy)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
+importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
+importFrom(dplyr,do)
+importFrom(dplyr,ends_with)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
+importFrom(dplyr,top_n)
+importFrom(dplyr,ungroup)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
@@ -45,10 +104,65 @@ importFrom(edgeR,filterByExpr)
 importFrom(edgeR,glmQLFTest)
 importFrom(edgeR,glmQLFit)
 importFrom(edgeR,topTags)
+importFrom(evaluate,evaluate)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_histogram)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggsave)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_gradient2)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_classic)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(grDevices,png)
+importFrom(grDevices,recordPlot)
+importFrom(graphics,legend)
+importFrom(graphics,par)
+importFrom(graphics,title)
+importFrom(magrittr,set_rownames)
+importFrom(methods,is)
+importFrom(nichenetr,diagrammer_format_signaling_graph)
+importFrom(nichenetr,get_expressed_genes)
+importFrom(nichenetr,get_ligand_signaling_path)
+importFrom(nichenetr,get_weighted_ligand_target_links)
+importFrom(nichenetr,make_heatmap_ggplot)
+importFrom(nichenetr,predict_ligand_activities)
+importFrom(nichenetr,prepare_ligand_target_visualization)
+importFrom(rlang,"!!")
+importFrom(rlang,":=")
+importFrom(rlang,.data)
+importFrom(rlang,sym)
+importFrom(rsvg,rsvg_png)
+importFrom(stats,anova)
+importFrom(stats,as.formula)
+importFrom(stats,coef)
+importFrom(stats,dist)
+importFrom(stats,family)
+importFrom(stats,formula)
+importFrom(stats,hclust)
+importFrom(stats,lm)
 importFrom(stats,model.matrix)
+importFrom(stats,na.omit)
+importFrom(stats,p.adjust)
+importFrom(stats,predict)
+importFrom(stats,pt)
 importFrom(stats,relevel)
+importFrom(stats,residuals)
 importFrom(stats,setNames)
+importFrom(stats,summary.lm)
+importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
+importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
+importFrom(tidyr,spread)
+importFrom(tools,file_ext)
+importFrom(tools,file_path_sans_ext)
+importFrom(utils,capture.output)
+importFrom(utils,combn)
+importFrom(utils,download.file)
