--- a/myR/DESCRIPTION
+++ b/myR/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R:
 Description: I provide with many helper functions that make you work with scRNAseq, and other multi-omics data analysis better. Sample data generation, doublet detection & removal, metadata mapping, etc.
 License: MIT + file LICENSE
 Encoding: UTF-8
+LazyData: true
 Imports:
     dplyr (>= 1.0.0),
     stringr,
@@ -18,6 +19,29 @@ Imports:
     FSA,
     stats,
     reshape,
+    circlize,
+    DiagrammeRsvg,
+    edgeR,
+    evaluate,
+    mgcv,
+    methods,
+    monocle3,
+    nichenetr,
+    purrr,
+    RColorBrewer,
+    rlang,
+    rsvg,
+    scales,
+    SingleCellExperiment,
+    SummarizedExperiment,
+    slingshot,
+    tibble,
+    tidyr,
+    tradeSeq,
+    viridisLite,
+    S4Vectors,
+    magrittr,
+    here
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
