myhm_genesets2 는 여전히 load_all이 되지 않음. genes_azi도 제대로 수정되지 않고 있음.

--- a/myR/DESCRIPTION
+++ b/myR/DESCRIPTION
@@ -41,7 +41,8 @@ Imports:
     viridisLite,
     S4Vectors,
     magrittr,
-    here
+    here,
+    reshape2
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
