--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -48,6 +48,7 @@ import(dplyr)
 import(ggplot2)
 import(mgcv)
 import(monocle3)
+import(patchwork)
 import(purrr)
 import(reticulate)
 import(scales)
@@ -55,6 +56,8 @@ import(slingshot)
 import(tidyr)
 import(tradeSeq)
 import(viridisLite)
+importFrom(BiocParallel,SerialParam)
+importFrom(BiocParallel,bplapply)
 importFrom(DiagrammeRsvg,export_svg)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RColorBrewer,brewer.pal.info)
@@ -66,6 +69,7 @@ importFrom(Seurat,FindMarkers)
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Idents)
 importFrom(Seurat,VariableFeatures)
+importFrom(car,leveneTest)
 importFrom(circlize,CELL_META)
 importFrom(circlize,chordDiagram)
 importFrom(circlize,circos.clear)
@@ -151,8 +155,12 @@ importFrom(stats,predict)
 importFrom(stats,pt)
 importFrom(stats,relevel)
 importFrom(stats,residuals)
+importFrom(stats,sd)
 importFrom(stats,setNames)
+importFrom(stats,shapiro.test)
 importFrom(stats,summary.lm)
+importFrom(stats,t.test)
+importFrom(stats,wilcox.test)
 importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
