R session 끄니 load_all은 잘 됨. genes_azi는 documents에 있어서 오류 발생시켰으므로 삭제함. save 부분도 gene_list.R에서 삭제함. plot_cluster_fractions도 수정함.

--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -6,32 +6,51 @@ export(analyze_gene_dynamics)
 export(analyze_gene_dynamics_tradeSeq)
 export(cdf)
 export(cdf_multi)
+export(cluster_pseudobulk_deg)
 export(cmb)
 export(cml)
+export(convert_gene_ids)
 export(downsample_sobj)
 export(draw_nichenet_circos_plot)
+export(format_results)
 export(generate_sample_names)
 export(generate_sample_values)
+export(genes_azi)
+export(genes_gut)
+export(genes_pbmc_new)
+export(genes_skin)
+export(geomx_rcc)
+export(geomx_rcc2)
 export(get_barcode_mapping)
 export(get_best_two)
+export(get_pathway_sets)
 export(is_doublet)
 export(ligand_to_target)
 export(marker_filter)
 export(marker_print)
+export(marker_print_all)
 export(marker_trim)
+export(myGO)
 export(mybar)
+export(mybox)
 export(mydensity)
 export(myhm_genes2)
+export(myhm_genes2_legacy)
 export(myhm_genesets2)
 export(post_hoc_slope_comparison)
 export(post_hoc_slope_comparison_legacy)
 export(post_hoc_slope_comparison_legacy2)
+export(prepare_gene_lists)
 export(prepare_nichenet_circos_data)
 export(print_gene_combinations)
 export(process_gene_list_dynamics)
+export(pseudobulk_deg)
 export(pseudobulk_linear_fit)
 export(pseudobulk_linear_fit_legacy)
 export(pseudobulk_linear_fit_legacy2)
+export(run_go_analysis)
+export(run_gsea_analysis)
+export(run_kegg_analysis)
 export(run_nichenet_analysis)
 export(run_slingshot_from_seurat)
 export(save_plot_with_conflict_resolution)
