--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # .gitignore에서는 line 중간에 있는 주석을 주석으로 생각하지 않는다. 주의할것.
+# 이미 추적 중인 걸 무시하려면, git rm (-r = recursive) --cached(파일이 아니라 git 추적을 삭제한다는 의미) (folder/file)를 하면 된다. 
+
+
+
 # R 패키지 빌드 아티팩트
 # R CMD check 출력
 myR.Rcheck/   
@@ -20,3 +24,5 @@ __pycache__/
 ipynb/output/
 ipynb/temporary/
 
+# new rmd files; .../로 하면 그 하위파일을 재귀적으로 무시하는데, .../*로 하면, 직속 파일만 무시한다.
+rmd/
