--- a/myR/DESCRIPTION
+++ b/myR/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: myR
-Title: my assist tools for seurat pipeline
-Version: 0.0.0.9000
+Title: my assist tools for scRNAseq(Seurat), GeoMx pipeline
+Version: 0.1.0.9000
 Authors@R: 
     person("Jaecheon", "Ko", , "eaoaeaoa@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = ".."))
-Description: I provide with many helper functions that make you work with scRNAseq, and other multi-omics data analysis better. Sample data generation, doublet detection & removal, metadata mapping, etc.
+Description: I provide with many helper functions that make you work with scRNAseq, GeoMx, and other multi-omics data analysis better. Sample data generation, doublet detection & removal, metadata mapping, etc.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
