--- a/myR/DESCRIPTION
+++ b/myR/DESCRIPTION
@@ -1,48 +1,82 @@
 Package: myR
-Title: my assist tools for scRNAseq(Seurat), GeoMx pipeline
-Version: 0.1.0.9000
+Title: Comprehensive Tools for scRNAseq (Seurat) and GeoMx Analysis
+Version: 0.2.0.9000
 Authors@R: 
     person("Jaecheon", "Ko", , "eaoaeaoa@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = ".."))
-Description: I provide with many helper functions that make you work with scRNAseq, GeoMx, and other multi-omics data analysis better. Sample data generation, doublet detection & removal, metadata mapping, etc.
+Description: Provides comprehensive helper functions for single-cell RNA-seq analysis, 
+    GeoMx Digital Spatial Profiling, and other multi-omics data. Includes modules for 
+    quality control, differential expression, marker gene analysis, trajectory inference, 
+    cell-cell communication (NicheNet), pathway enrichment, gene signature discovery, 
+    and advanced visualizations. Refactored for improved modularity and maintainability.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
-    dplyr (>= 1.0.0),
-    stringr,
-    Seurat (>= 4.0.0),
-    reticulate,
-    ggplot2,
+    AnnotationDbi,
+    broom,
     car,
-    userfriendlyscience,
-    FSA,
-    stats,
-    reshape,
     circlize,
+    clusterProfiler,
     DiagrammeRsvg,
+    dplyr (>= 1.0.0),
     edgeR,
     evaluate,
-    mgcv,
+    FSA,
+    ggplot2,
+    ggpubr,
+    ggrepel,
+    here,
+    limma,
+    lme4,
+    magrittr,
+    MASS,
+    Matrix,
     methods,
+    mgcv,
     monocle3,
     nichenetr,
+    org.Hs.eg.db,
+    pheatmap,
     purrr,
     RColorBrewer,
+    reshape,
+    reshape2,
+    reticulate,
     rlang,
+    rstatix,
     rsvg,
+    S4Vectors,
     scales,
+    Seurat (>= 4.0.0),
     SingleCellExperiment,
-    SummarizedExperiment,
     slingshot,
+    stats,
+    stringr,
+    SummarizedExperiment,
     tibble,
     tidyr,
+    tools,
     tradeSeq,
-    viridisLite,
-    S4Vectors,
-    magrittr,
-    here,
-    reshape2
+    utils,
+    viridisLite
+Suggests:
+    anndata,
+    escape,
+    fgsea,
+    glmnet,
+    GSEABase,
+    msigdbr,
+    NMF,
+    numpy,
+    parallel,
+    patchwork,
+    progeny,
+    pROC,
+    randomForest,
+    readxl,
+    testthat (>= 3.0.0),
+    UpSetR
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
