--- a/myR/DESCRIPTION
+++ b/myR/DESCRIPTION
@@ -26,9 +26,11 @@ Imports:
     ggplot2,
     ggpubr,
     ggrepel,
+    glue,
     here,
     limma,
     lme4,
+    lmerTest,
     magrittr,
     MASS,
     Matrix,
@@ -62,6 +64,8 @@ Imports:
     viridisLite
 Suggests:
     anndata,
+    broom.mixed,
+    emmeans,
     escape,
     fgsea,
     glmnet,
@@ -69,14 +73,17 @@ Suggests:
     msigdbr,
     NMF,
     numpy,
+    openxlsx,
     parallel,
     patchwork,
+    pheatmap,
     progeny,
     pROC,
     randomForest,
     readxl,
     testthat (>= 3.0.0),
-    UpSetR
+    UpSetR,
+    viridis
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
