Fix major devtools::check() warnings
FIXED:
- Added missing dependencies to DESCRIPTION Suggests:
  * ComplexUpset, DESeq2, DiagrammeR, rmarkdown, userfriendlyscience
  * GeoMxTools, GeoMxWorkflows, NanoStringNCTools (GeoMx analysis)
  * knitr (for vignettes/reports)

- Moved non-R data files to proper location:
  * data/41590_2024_1994_MOESM6_ESM.xlsx → inst/extdata/
  * data/NicheNetData → inst/extdata/
  * Removed empty data/ directory

RESULT:
✅ Package dependencies properly declared
✅ Data files in correct location
✅ Follows R package best practices

REMAINING (ACCEPTABLE FOR DEVELOPMENT):
- Non-ASCII characters in gene_list.R/legacy.R (gene names from databases)
- Some undocumented legacy functions (will be deprecated)
- Import warnings (namespace conflicts, expected with so many packages)
- Line width notes (cosmetic, won't affect function)

--- a/myR/DESCRIPTION
+++ b/myR/DESCRIPTION
@@ -67,12 +67,19 @@ Imports:
 Suggests:
     anndata,
     broom.mixed,
+    ComplexUpset,
+    DESeq2,
+    DiagrammeR,
     emmeans,
     escape,
     fgsea,
+    GeomxTools,
+    GeoMxWorkflows,
     glmnet,
     GSEABase,
+    knitr,
     msigdbr,
+    NanoStringNCTools,
     NMF,
     numpy,
     openxlsx,
@@ -83,8 +90,10 @@ Suggests:
     pROC,
     randomForest,
     readxl,
+    rmarkdown,
     testthat (>= 3.0.0),
     UpSetR,
+    userfriendlyscience,
     viridis
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
