--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ ipynb/temporary/
 
 # new rmd files; .../로 하면 그 하위파일을 재귀적으로 무시하는데, .../*로 하면, 직속 파일만 무시한다.
 rmd/myR/inst/extdata/NicheNetData
+
+# Environment variables
+.env
