test. 시리즈를 손봤다. test_working에서 색인을 넣었고, PERMANOVA의 rownames()문제를 더 robust하게 함

--- a/myR/DESCRIPTION
+++ b/myR/DESCRIPTION
@@ -19,9 +19,11 @@ Imports:
     car,
     circlize,
     clusterProfiler,
+    ComplexHeatmap,
     DiagrammeRsvg,
     dplyr (>= 1.0.0),
     edgeR,
+    emmeans,
     evaluate,
     FSA,
     ggplot2,
