myhm2 정리, _legacy 붙이기, fgs 버전 일단 올림, document() 등

--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -3,14 +3,20 @@
 S3method(print,gene_signature)
 S3method(print,geomx_config)
 export(CompareModuleScoringMethods)
+export(PERMANOVA)
+export(PlotClusterProportions)
+export(PrintTopMarkersForLLM)
+export(TestLISI)
 export(acmb)
 export(add_progeny_scores)
 export(add_signature_enrichit)
+export(add_significance_stars)
 export(all_markers_to_list)
 export(analyze_gene_dynamics)
 export(analyze_gene_dynamics_tradeSeq)
 export(cdf)
 export(cdf_multi)
+export(check_packages)
 export(cluster_pseudobulk_deg)
 export(cmb)
 export(cml)
@@ -18,13 +24,19 @@ export(compare_screening_vs_lmm)
 export(convert_gene_ids)
 export(create_analysis_config)
 export(create_delta_matrix)
+export(create_error_message)
+export(create_plot_grid)
+export(delta_one_gene_emm)
 export(diagnose_sample_parity)
 export(downsample_sobj)
 export(draw_nichenet_circos_plot)
 export(export_lmm_results)
 export(extract_gene_coefficients)
 export(extract_significant_genes)
+export(filter_demulti_results)
 export(find_drug_response_genes)
+export(find_gene_signature)
+export(find_gene_signature_v3)
 export(find_temporal_response_genes)
 export(format_results)
 export(generate_lmm_report)
@@ -38,28 +50,44 @@ export(geomx_rcc)
 export(geomx_rcc2)
 export(get_barcode_mapping)
 export(get_best_two)
+export(get_color_palette)
+export(get_default_plot_dims)
 export(get_pathway_sets)
 export(gut_immune_markers)
 export(is_doublet)
 export(ligand_to_target)
 export(lrf)
+export(make_delta_emm_matrix)
+export(make_delta_matrix_by_patient)
 export(marker_filter)
 export(marker_print)
 export(marker_print_all)
 export(marker_trim)
 export(myGO)
 export(mybar)
-export(mybox)
+export(mybox_cell)
+export(mybox_pb)
 export(mydensity)
-export(myhm_genes2)
 export(myhm_genes2_legacy)
 export(myhm_genes4)
-export(myhm_genesets2)
 export(myhm_genesets3)
 export(myhm_genesets4)
 export(myline)
 export(mylines)
+export(parse_doublet_name)
+export(pb_deg_DESeq2)
+export(pb_deg_all_markers)
+export(pb_deg_edgeR)
+export(pb_deg_linear)
+export(pb_deg_markers)
+export(pb_deg_wilcox)
+export(pb_matrix_create)
+export(pb_post_hoc_slope)
+export(pb_prepare_edgeR)
+export(plot_delta_heatmap)
+export(plot_drug_response_map)
 export(plot_gene_boxplot)
+export(plot_interaction_for_gene)
 export(plot_lmm_results)
 export(plot_volcano)
 export(post_hoc_slope_comparison)
@@ -81,15 +109,24 @@ export(run_kegg_analysis)
 export(run_lmm_analysis)
 export(run_nichenet_analysis)
 export(run_slingshot_from_seurat)
+export(sanitize_filename)
 export(save_plot_with_conflict_resolution)
 export(save_seurat_to_h5ad)
 export(scatter_smooth)
 export(scatter_smooth_colored)
+export(score_signature)
 export(screen_genes)
 export(seurat_group_stats)
 export(seurat_posthoc_analysis)
+export(summarize_demulti_results)
 export(summarize_geomx_object)
 export(upset_gene_lists)
+export(validate_choice)
+export(validate_genes)
+export(validate_metadata_column)
+export(validate_numeric_range)
+export(validate_path)
+export(validate_seurat)
 import(RColorBrewer)
 import(Seurat)
 import(SingleCellExperiment)
@@ -98,7 +135,6 @@ import(dplyr)
 import(ggplot2)
 import(mgcv)
 import(monocle3)
-import(patchwork)
 import(purrr)
 import(reticulate)
 import(scales)
@@ -108,7 +144,12 @@ import(tradeSeq)
 import(viridisLite)
 importFrom(BiocParallel,SerialParam)
 importFrom(BiocParallel,bplapply)
+importFrom(DESeq2,DESeq)
+importFrom(DESeq2,DESeqDataSetFromMatrix)
+importFrom(DESeq2,counts)
+importFrom(DESeq2,results)
 importFrom(DiagrammeRsvg,export_svg)
+importFrom(Matrix,rowSums)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RColorBrewer,brewer.pal.info)
 importFrom(S4Vectors,DataFrame)
@@ -119,6 +160,7 @@ importFrom(Seurat,FindMarkers)
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Idents)
 importFrom(Seurat,VariableFeatures)
+importFrom(Seurat,WhichCells)
 importFrom(car,leveneTest)
 importFrom(circlize,CELL_META)
 importFrom(circlize,chordDiagram)
