scatter_smooth_colored, color변수 categorical var도 지원하도록 패치

--- a/myR/.Rbuildignore
+++ b/myR/.Rbuildignore
@@ -1,1 +1,14 @@
 ^LICENSE\.md$
+^\\.github$
+^docs$
+^ipynb$
+^rmd$
+^projects$
+^trash$
+^README.*\\.Rmd$
+^\.Rhistory$
+^deprecated$
+^renv$
+^trash$
+^projects$
+^environment\.yml$
