Introduce train_meta_learner_v6 with safe parallel defaults

--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -109,6 +109,8 @@ export(run_kegg_analysis)
 export(run_lmm_analysis)
 export(run_nichenet_analysis)
 export(run_slingshot_from_seurat)
+export(train_meta_learner_v5)
+export(train_meta_learner_v6)
 export(sanitize_filename)
 export(save_plot_with_conflict_resolution)
 export(save_seurat_to_h5ad)
