--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -109,6 +109,7 @@ export(run_kegg_analysis)
 export(run_lmm_analysis)
 export(run_nichenet_analysis)
 export(run_slingshot_from_seurat)
+export(compute_meta_gene_importance)
 export(train_meta_learner_v5)
 export(train_meta_learner_v6)
 export(sanitize_filename)
