feat(milo): add pipeline runner and documentation notes

--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -107,6 +107,7 @@ export(run_go_analysis)
 export(run_gsea_analysis)
 export(run_kegg_analysis)
 export(run_lmm_analysis)
+export(run_milo_pipeline)
 export(run_nichenet_analysis)
 export(run_slingshot_from_seurat)
 export(compute_meta_gene_importance)
