--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(print,gene_signature)
 S3method(print,geomx_config)
 export(CompareModuleScoringMethods)
+export(MILO)
 export(PERMANOVA)
 export(PlotClusterProportions)
 export(PrintTopMarkersForLLM)
@@ -21,22 +22,30 @@ export(cluster_pseudobulk_deg)
 export(cmb)
 export(cml)
 export(compare_screening_vs_lmm)
+export(compute_meta_gene_importance)
 export(convert_gene_ids)
 export(create_analysis_config)
 export(create_delta_matrix)
 export(create_error_message)
 export(create_plot_grid)
 export(delta_one_gene_emm)
-export(diagnose_sample_parity)
+export(diagnosis_parity)
 export(downsample_sobj)
 export(draw_nichenet_circos_plot)
 export(export_lmm_results)
 export(extract_gene_coefficients)
 export(extract_significant_genes)
+export(fast_count_cells)
+export(fgs_preprocess_data_v5.2)
 export(filter_demulti_results)
 export(find_drug_response_genes)
 export(find_gene_signature)
 export(find_gene_signature_v3)
+export(find_gene_signature_v4)
+export(find_gene_signature_v4.1)
+export(find_gene_signature_v4.2)
+export(find_gene_signature_v5)
+export(find_gene_signature_v5.2)
 export(find_temporal_response_genes)
 export(format_results)
 export(generate_lmm_report)
@@ -63,6 +72,7 @@ export(marker_filter)
 export(marker_print)
 export(marker_print_all)
 export(marker_trim)
+export(milo_neighborhood_da_v2)
 export(myGO)
 export(mybar)
 export(mybox_cell)
@@ -70,7 +80,7 @@ export(mybox_pb)
 export(mydensity)
 export(myhm_genes2_legacy)
 export(myhm_genes4)
-export(myhm_genesets3)
+export(myhm_genesets3_legacy)
 export(myhm_genesets4)
 export(myline)
 export(mylines)
@@ -102,28 +112,39 @@ export(pseudobulk_deg)
 export(pseudobulk_linear_fit)
 export(pseudobulk_linear_fit_legacy)
 export(pseudobulk_linear_fit_legacy2)
+export(quick_screen_genes)
+export(runMAST)
+export(runMAST_v1)
+export(runMUSCAT)
+export(runMUSCAT_v1)
+export(runNEBULA)
 export(run_complete_analysis)
 export(run_go_analysis)
 export(run_gsea_analysis)
 export(run_kegg_analysis)
 export(run_lmm_analysis)
+export(run_lmm_multiple_genes)
 export(run_milo_pipeline)
 export(run_nichenet_analysis)
 export(run_slingshot_from_seurat)
-export(compute_meta_gene_importance)
-export(train_meta_learner_v5)
-export(train_meta_learner_v6)
 export(sanitize_filename)
 export(save_plot_with_conflict_resolution)
 export(save_seurat_to_h5ad)
-export(scatter_smooth)
 export(scatter_smooth_colored)
-export(score_signature)
+export(scatter_smooth_legacy)
+export(score_signature2)
 export(screen_genes)
+export(set_parallel_profile)
 export(seurat_group_stats)
 export(seurat_posthoc_analysis)
 export(summarize_demulti_results)
 export(summarize_geomx_object)
+export(test_cluster_logfc_bias)
+export(train_meta_learner_v1)
+export(train_meta_learner_v2)
+export(train_meta_learner_v3)
+export(train_meta_learner_v5)
+export(train_meta_learner_v6)
 export(upset_gene_lists)
 export(validate_choice)
 export(validate_genes)
@@ -154,15 +175,19 @@ importFrom(DESeq2,counts)
 importFrom(DESeq2,results)
 importFrom(DiagrammeRsvg,export_svg)
 importFrom(Matrix,rowSums)
+importFrom(Matrix,sparse.model.matrix)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RColorBrewer,brewer.pal.info)
 importFrom(S4Vectors,DataFrame)
 importFrom(Seurat,AggregateExpression)
 importFrom(Seurat,Cells)
+importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,DefaultAssay)
+importFrom(Seurat,FindAllMarkers)
 importFrom(Seurat,FindMarkers)
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Idents)
+importFrom(Seurat,NormalizeData)
 importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,WhichCells)
 importFrom(car,leveneTest)
@@ -222,6 +247,7 @@ importFrom(grDevices,recordPlot)
 importFrom(graphics,legend)
 importFrom(graphics,par)
 importFrom(graphics,title)
+importFrom(lmerTest,lmer)
 importFrom(magrittr,set_rownames)
 importFrom(methods,is)
 importFrom(nichenetr,diagrammer_format_signaling_graph)
@@ -231,6 +257,12 @@ importFrom(nichenetr,get_weighted_ligand_target_links)
 importFrom(nichenetr,make_heatmap_ggplot)
 importFrom(nichenetr,predict_ligand_activities)
 importFrom(nichenetr,prepare_ligand_target_visualization)
+importFrom(openxlsx,read.xlsx)
+importFrom(parallel,clusterEvalQ)
+importFrom(parallel,clusterExport)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parLapply)
+importFrom(parallel,stopCluster)
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
@@ -249,6 +281,7 @@ importFrom(stats,na.omit)
 importFrom(stats,p.adjust)
 importFrom(stats,predict)
 importFrom(stats,pt)
+importFrom(stats,qnorm)
 importFrom(stats,relevel)
 importFrom(stats,residuals)
 importFrom(stats,sd)
@@ -257,6 +290,7 @@ importFrom(stats,shapiro.test)
 importFrom(stats,summary.lm)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
+importFrom(stringr,str_extract)
 importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
