Rename train_meta_learner_v6 to TML6 with comprehensive roxygen documentation

--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -110,6 +110,7 @@ export(run_lmm_analysis)
 export(run_nichenet_analysis)
 export(run_slingshot_from_seurat)
 export(compute_meta_gene_importance)
+export(TML6)
 export(train_meta_learner_v5)
 export(train_meta_learner_v6)
 export(sanitize_filename)
