Add v5.3 with dynamic k for GAM, consolidate MAST/NEBULA/MUSCAT into test_analysis.R with version names

--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -109,6 +109,9 @@ export(run_kegg_analysis)
 export(run_lmm_analysis)
 export(run_nichenet_analysis)
 export(run_slingshot_from_seurat)
+export(runMAST_v1)
+export(runNEBULA_v1)
+export(runMUSCAT_v5)
 export(compute_meta_gene_importance)
 export(TML6)
 export(train_meta_learner_v5)
