Add FGS_v5.2 and FGS_v5.3 to signature.R, fix runMAST_v1 and runNEBULA_v1
- Added FGS_v5.2 and FGS_v5.3 as aliases in signature.R
- Updated NAMESPACE to export FGS functions
- Fixed runMAST_v1 to use MAST::SceToSingleCellAssay (with FromMatrix fallback)
- Fixed runNEBULA_v1 to use HL method with fallback
- Verified v5.3 GAM dynamic k works correctly
- Verified v5.2 and v5.3 work with pseudobulk data
- runMUSCAT_v5 confirmed working
- Note: runMAST_v1 still has MAST package compatibility issues (FromSeurat deprecated)

--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -37,6 +37,10 @@ export(filter_demulti_results)
 export(find_drug_response_genes)
 export(find_gene_signature)
 export(find_gene_signature_v3)
+export(FGS_v5.2)
+export(FGS_v5.3)
+export(find_gene_signature_v5.2)
+export(find_gene_signature_v5.3)
 export(find_temporal_response_genes)
 export(format_results)
 export(generate_lmm_report)
