wtf is with formula? anayway

--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -132,6 +132,7 @@ export(runMUSCAT_v5)
 export(runMUSCAT2_v1)
 export(runNEBULA2_v1)
 export(runNEBULA2_v1_with_pseudobulk)
+export(runNEBULA2_v1_with_formula)
 export(compute_meta_gene_importance)
 export(TML6)
 export(train_meta_learner_v5)
