analysis dir structured

--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -111,14 +111,30 @@ export(run_go_analysis)
 export(run_gsea_analysis)
 export(run_kegg_analysis)
 export(run_lmm_analysis)
+export(run_deg_consensus)
+export(run_deg_consensus_with_plots)
 export(run_nichenet_analysis)
 export(run_slingshot_from_seurat)
-export(runMAST_v1)
-export(runNEBULA_v1)
-export(runMUSCAT_v5)
-export(runMUSCAT2_v1)
-export(runNEBULA2_v1)
-export(runNEBULA2_v1_with_pseudobulk)
+export(runMAST)
+export(runMUSCAT)
+export(runLIMMA_voom_v1)
+export(runLIMMA_trend_v1)
+export(runEDGER_LRT_v1)
+export(runEDGER_QLF_v1)
+export(runDESEQ2_Wald_v1)
+export(runDESEQ2_LRT_v1)
+export(standardize_deg_results)
+export(build_deg_matrices)
+export(compute_agreement_scores)
+export(perform_deg_pca)
+export(cluster_deg_methods)
+export(compute_consensus_scores)
+export(generate_consensus_deg_list)
+export(plot_consensus_meta_distributions)
+export(plot_consensus_volcano)
+export(plot_consensus_heatmap)
+export(plot_method_pca)
+export(plot_gene_umap)
 export(compute_meta_gene_importance)
 export(TML6)
 export(train_meta_learner_v5)
@@ -280,3 +296,4 @@ importFrom(tools,file_path_sans_ext)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
 importFrom(utils,download.file)
+export(runNEBULA)
