--- a/myR/NAMESPACE
+++ b/myR/NAMESPACE
@@ -114,6 +114,7 @@ export(pseudobulk_linear_fit_legacy2)
 export(quick_screen_genes)
 export(runMAST)
 export(runMAST_v1)
+export(runDREAM_v1)
 export(runMUSCAT)
 export(runMUSCAT_v1)
 export(runNEBULA)
@@ -132,6 +133,7 @@ export(runMUSCAT_v5)
 export(runMUSCAT2_v1)
 export(runNEBULA2_v1)
 export(runNEBULA2_v1_with_pseudobulk)
+export(runDREAM_v1)
 export(compute_meta_gene_importance)
 export(TML6)
 export(train_meta_learner_v5)
