docs: Add internal documentation (security review and migration plan)
- Add SECURITY_REVIEW_REPORT.md for internal security audit
- Add GIT_PUBLIC_REPOSITORY_PLAN.md for migration strategy
- Add to .gitignore to prevent tracking in public repos

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ renv/
 *mtx
 *mtx.gz
 
+# Internal documentation (not for public repository)
+docs-main/SECURITY_REVIEW_REPORT.md
+docs-main/GIT_PUBLIC_REPOSITORY_PLAN.md
+
