Add pipeline scripts and documentation from pipe branch
Squash merge of all changes from pipe branch after branching from main:
- Add pipeline scripts (pipe1-6, validation, wrapper)
- Add comprehensive documentation (commands, guides, data flow)
- Add R utility functions for pipeline operations
- Add Korean translations for guides

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ renv/
 *.pdf
 *.png
 *.csv
+# Exception: track config CSV files for pipeline
+!config/*.csv
+!**/config/*.csv
 */data/*
 *.tar.gz
 *.gz
