feat(cci): refactor NicheNet/MultiNicheNet workflows, add utils, organize scripts
1. Added myR/R/utils_cci.R for shared functions (data load, logging).
2. Refactored MNN/NN wrappers to use utils and improve I/O safety.
3. Created scripts/cci/NicheNet/ for CLI execution.
4. Updated MNN Circos plot to accept threshold args and show usage in mtext.
5. Organized scripts/cci/ by moving test scripts to archive/.

--- a/.gitignore
+++ b/.gitignore
@@ -36,25 +36,25 @@ rmd/
 .env
 
 # data, logs, outputs...
-*output*
-*plots*
-projects/
-trash/
-renv/
-*renv*
+# *output*
+# *plots*
+# projects/
+# trash/
+# renv/
+# *renv*
 *bin
 *deprecated*
 
-*.rds
-*.log
-*.pdf
-*.png
-*.csv
-*/data/*
+# *.rds
+# # *.log
+# *.pdf
+# *.png
+# *.csv
+# */data/*
 *.tar.gz
 *.gz
-*.qs
-*sobj*
+# *.qs
+# *sobj*
 *h5ad
 *h5seurat
 *loom
